# invobook

./: .babelrc  .dockerignore  .env  .env.action  .env.dusk.local  .env.example  .env.travis  .eslintrc.json  .gitattributes  .gitignore  .php_cs  .rnd  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  clover.xml  cmd  composer.json  dev.Dockerfile  docker-compose.dev.yml  docker-compose.yml  docker-compose.yml.example  eslintrc.json  install.sh  laravel-echo-server.dev.json  laravel-echo-server.json  package-lock.json  package.json  phpstan.neon  phpunit.xml  pint.json  pull_request_template.md  readme.md  site.conf  tailwind.config.js  tailwind.js  (+3 more)
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1_Bug_report.md  2_Support_question.md  3_Feature_request.md  4_Security_vulnerabilities.md
.github/workflows/: format_php.yml  phpunit_test.yml  standardjs.yml  test.yml
.phpintel/: index
app/Actions/: CreateInvoice.php  GenerateInvoicePdf.php
app/Activity/: Activity.php
app/Authorization/: Authorization.php  AuthorizationServiceProvider.php
app/Console/: Kernel.php
app/Contracts/: HasMembers.php  HasNotificationRecipients.php  Huntable.php  Searchable.php
app/Discussion/: DiscussionServiceProvider.php  routes.php
app/Enums/: InvoiceResponseType.php
app/Events/: DiscussionCreated.php  MessageCreated.php  MessageUpdated.php
app/Exceptions/: Handler.php  OwnerPermissionCantBeRevoked.php  RoleCantBeDeleted.php  (+2 more)
bootstrap/: app.php  autoload.php
config/: Cargo.toml  about.php  activitylog.php  app.php  auth.php  backup.php  blade-icons.php  blade-ui-kit.php  broadcasting.php  cache.php  compile.php  database.php  filesystems.php  hashing.php  insights.php  invoices.php  livewire.php  locale.php  logging.php  mail.php  medialibrary.php  message.php  notification.php  pennant.php  permission.php  queue.php  scout.php  services.php  session.php  telescope.php  view.php  websockets.php
data/: Cargo.toml
data/src/: lib.rs  models.rs
data/src/models/: post.rs  tag.rs  user.rs
docker/: echo-server.Dockerfile  echo-server.sh  site.conf  site.dev.conf  websocket.Dockerfile  worker.Dockerfile
docs/: cloud-install.md  overview.md
plugins/: .gitignore  PluginServiceProvider.php  RegisterPluginProviders.php  composer.json  config.php
public/: .htaccess  manifest.json  mix-manifest.json  style.css
routes/: api.php  channels.php  dev.php  web.php
server/: Cargo.toml
server/src/: handlers.rs  logger.rs  main.rs  routes.rs  server.rs
server/tests/: home.rs
src/: main.rs  routes.rs
stubs/: composer.json.stub
tests/: DuskTestCase.php  TestCase.php  TestExceptionHandler.php
views/: Cargo.toml  package-lock.json  package.json  tailwind.config.js
(+1457 files in other folders)
