[workspace]
resolver = "2"
members = [
    "data",
    "server",
    "views",
    "config",
]

[workspace.package]
authors = ["Nehal Hasnayeen"]
version = "0.0.0"
edition = "2021"

[workspace.dependencies]
chrono = "0.4.23"
serde = { version = "1.0.130", features = ["derive"] }
lazy_static = "1.4.0"
