[workspace]
resolver = "2"
members = [
    "data",
    "server",
    "views",
    "config",
]

[workspace.package]
authors = ["Nehal Hasnayeen"]
version = "0.0.0"
edition = "2021"

[workspace.dependencies]
chrono = { version = "0.4.23", default-features = false, features = ["clock"] }
serde = { version = "1.0.130", features = ["derive"] }
lazy_static = "1.4.0"
anyhow = "1.0.68"
