[package]
name = "server"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
views = { path = "../views" }
axum = "0.6.1"
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
axum-test-helper = "0.1.1"
pretty_assertions = "1.3.0"

[lib]
name = "server"
path = "src/server.rs"
