[package]
name = "server"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
views = { path = "../views" }
data = { path = "../data" }
config = { path = "../config" }
axum = "0.6.1"
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.3.5", features = ["fs"] }
chrono.workspace = true
tracing.workspace = true
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = ["json"] }

[dev-dependencies]
axum-test-helper = "0.1.1"
pretty_assertions = "1.3.0"

[lib]
name = "server"
path = "src/server.rs"
